table_3/results/Cache2k-CF_post_nullaway_wpi.txt
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_cf-wpi-post/src/src/main/java/org/cache2k/config/Cache2kConfig.java:83: error: [NullAway] @NonNull field name not initialized
  private  String name;
                  ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_cf-wpi-post/src/src/main/java/org/cache2k/config/Cache2kConfig.java:85: error: [NullAway] @NonNull field keyType not initialized
  private  CacheType<K> keyType;
                        ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_cf-wpi-post/src/src/main/java/org/cache2k/config/Cache2kConfig.java:86: error: [NullAway] @NonNull field valueType not initialized
  private  CacheType<V> valueType;
                        ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_cf-wpi-post/src/src/main/java/org/cache2k/config/Cache2kConfig.java:107: error: [NullAway] @NonNull field loaderExecutor not initialized
  private  CustomizationSupplier<? extends Executor> loaderExecutor;
                                                     ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_cf-wpi-post/src/src/main/java/org/cache2k/config/Cache2kConfig.java:88: error: [NullAway] assigning @Nullable expression to @NonNull field
  private  Duration expireAfterWrite = null;
                    ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_cf-wpi-post/src/src/main/java/org/cache2k/config/Cache2kConfig.java:89: error: [NullAway] assigning @Nullable expression to @NonNull field
  private  Duration timerLag = null;
                    ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_cf-wpi-post/src/src/main/java/org/cache2k/config/Cache2kConfig.java:223: error: [NullAway] assigning @Nullable expression to @NonNull field
      valueType = null;
                ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_cf-wpi-post/src/src/main/java/org/cache2k/config/Cache2kConfig.java:242: error: [NullAway] assigning @Nullable expression to @NonNull field
      valueType = null;
                ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_cf-wpi-post/src/src/main/java/org/cache2k/config/Cache2kConfig.java:262: error: [NullAway] assigning @Nullable expression to @NonNull field
    this.expireAfterWrite = durationCheckAndSanitize(v);
                          ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_cf-wpi-post/src/src/main/java/org/cache2k/config/Cache2kConfig.java:281: error: [NullAway] assigning @Nullable expression to @NonNull field
    this.timerLag = durationCheckAndSanitize(v);
                  ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_cf-wpi-post/src/src/main/java/org/cache2k/config/CacheTypeCapture.java:103: error: [NullAway] method returns @Nullable, but superclass method org.cache2k.config.CacheType.getComponentType() returns @NonNull
    public  CacheType<?> getComponentType() {
                         ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
11 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 661ms
11
